--- a/source/sass/blocks/demo.scss
+++ b/source/sass/blocks/demo.scss
@@ -6,21 +6,21 @@
 .demo {
   padding-top: 17px;
   padding-bottom: 24px;
-  background-color: #eaeaea;
+  background-color: $platinum;
 }
 
 .demo__title {
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
-  color: #000000;
+  color: $black;
   margin-top: 0;
   margin-bottom: 25px;
 }
 
 
 .demo__text {
-  font-family: "Lato", sans-serif;
+  font-family: $fontLato, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
@@ -45,7 +45,7 @@
   width: 124px;
   padding-top: 16px;
   padding-bottom: 16px;
-  border: 1px solid #cfcfcf;
+  border: 1px solid $lightgrey;
   border-radius: 5px;
 }
 
@@ -54,31 +54,31 @@
   line-height: 24px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
   margin: auto;
 }
 
 .demo__stats-subtitle {
-  font-family: "Lato", sans-serif;
+  font-family: $fontLato, sans-serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
   text-align: center;
-  color: #444444;
+  color: $grey;
   position: absolute;
   left: 0;
   right: 0;
   bottom: -14px;
   margin: 0 auto;
   width: 110px;
-  background-color: #eaeaea;
+  background-color: $platinum;
   top: 50px;
 }
 
 .demo-price {
   line-height: 20px;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
   text-align: center;
   margin-top: 34px;
   margin-bottom: 40px;
@@ -96,20 +96,20 @@
   width: 84px;
   height: 14px;
   padding: 3px 5px;
-  border: 1px solid #cdcdcd;
+  border: 1px solid $lightgrey;
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color: $white;
 }
 
 .demo-toggle {
   width: 50%;
   height: 6px;
   border-radius: 10px;
-  background-color: #68b738;
+  background-color: $green;
 }
 
 .demo__button-before {
-  font-family: inherit;
+  font-family: $fontOswald, inherit;
   border: 0;
   background-color: transparent;
   font-size: 16px;
@@ -122,7 +122,7 @@
 }
 
 .demo__button-after {
-  font-family: inherit;
+  font-family: $fontOswald, inherit;
   border: 0;
   background-color: transparent;
   font-size: 16px;
@@ -156,7 +156,6 @@
     position: relative;
     padding-top: 44px;
     padding-bottom: 65px;
-    border-top: 1px solid #e6e6e6;
     background-color: transparent;
   }
 
@@ -207,7 +206,7 @@
     appearance: none;
     width: 100%;
     height: 6px;
-    background-color: #dcdcdc;
+    background-color: $lightgrey;
     outline: 0;
     cursor: pointer;
   }
@@ -219,25 +218,26 @@
     margin-top: -17px;
     width: 34px;
     height: 34px;
-    border: 1px solid #cecece;
+    border: 1px solid $lightgrey;
     border-radius: 50%;
-    box-shadow: 0 2px 2px 0 #d6d6d6;
-    background-color: #ffffff;
+    box-shadow: 0 2px 2px 0 $lightgrey;
+    background-color: $white;
     cursor: pointer;
   }
 
   .demo__progress {
     margin-top: 81px;
+    background-color: $platinum;
   }
 
   .demo__stats-subtitle {
-    background-color: #ffffff;
+    background-color: $smokywhite;
   }
 }
 
 @media (min-width: $desktop-width) {
   .demo {
-    background-color: #f2f2f2;
+    background-color: $smokywhite;
   }
 
   .demo__wrapper {
@@ -273,5 +273,9 @@
     justify-content: space-between;
     width: 325px;
     text-align: left;
+  }
+
+  .demo__button-block {
+    background-color: transparent;
   }
 }
