--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -13,7 +13,7 @@
   position: relative;
   padding: 21px;
   margin-top: 22px;
-  background-color: #f2f2f2;
+  background-color: $smokywhite;
   width: 100%;
 }
 
@@ -22,7 +22,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #68b738;
+  background-color: $green;
 }
 
 .program__icon {
@@ -34,20 +34,20 @@
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
   width: calc(100% - 70px);
   margin-top: 10px;
   margin-bottom: 12px;
 }
 
 .program-item__intro {
-  font-family: "Lato", sans-serif;
-  color: #444444;
+  font-family: $fontLato, sans-serif;
+  color: $grey;
   width: 100%;
   padding-bottom: 21px;
   margin-top: 17px;
   margin-bottom: 0;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid $lightgrey;
 }
 
 .program-item__link {
@@ -55,7 +55,7 @@
   align-items: center;
   display: flex;
   padding-top: 20px;
-  color: #000000;
+  color: $black;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -66,11 +66,11 @@
   line-height: 16px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
   width: auto;
   padding-right: 10px;
   margin: 0;
-  background-color: #f2f2f2;
+  background-color: transparent;
 }
 
 .program-icon {
@@ -78,14 +78,16 @@
   overflow: hidden;
 }
 
-.program-icon--slim {
-  left: 8px;
-  bottom: 2px;
+.program__picture--slim {
+  position: absolute;
+  left: 5px;
+  top: -1px;
 }
 
-.program-icon--pro {
-  left: -9px;
-  bottom: 13px;
+.program__picture--pro {
+  position: absolute;
+  top: 15px;
+  width: 68px;
 }
 
 @media (min-width: $tablet-width) {
@@ -141,12 +143,27 @@
     width: 140px;
     height: 194px;
   }
+
+  .program__picture--slim {
+    width: 100%;
+    height: 100%;
+  }
+
+  .program__picture--pro {
+    width: 100%;
+    height: 100%;
+    top: 5px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .programs__list {
     display: flex;
     gap: 80px;
+  }
+
+  .program__picture--pro {
+    top: 5px;
   }
 
   .programs__wrapper {
