--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -16,15 +16,15 @@
   line-height: 20px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #000000;
+  color: $black;
   width: 40%;
   margin: 0;
 }
 
 .search__address {
-  font-family: "Lato", sans-serif;
+  font-family: $fontLato, sans-serif;
   font-style: normal;
-  color: #444444;
+  color: $grey;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -60,6 +60,6 @@
     top: 95px;
     left: 40px;
     width: 570px;
-    background-color: #ffffff;
+    background-color: $white;
   }
 }
