--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,5 +1,13 @@
 $green:#68b738;
 $lightgrey: #d9d9d9;
+$smokywhite: #f2f2f2;
+$platinum: #eaeaea;
+$black: #000000;
+$white: #ffffff;
+$grey: #444444;
+
+$fontOswald: "Oswald", "Arial", sans-serif;
+$fontLato: "Lato", "Arial", sans-serif;
 
 $tablet-width: 768px;
 $desktop-width: 1200px;
