--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,14 +1,15 @@
-@import "../sass/global/variables.scss";
-@import "../sass/global/fonts.scss";
-@import "../sass/global/global.scss";
-@import "../sass/global/page.scss";
-@import "../sass/blocks/main-header.scss";
-@import "../sass/blocks/head-block.scss";
-@import "../sass/blocks/programs.scss";
-@import "../sass/blocks/intro.scss";
-@import "../sass/blocks/demo.scss";
-@import "../sass/blocks/footer.scss";
-@import "../sass/blocks/search.scss";
-@import "../sass/blocks/catalog.scss";
-@import "../sass/blocks/additionally.scss";
-@import "../sass/blocks/form.scss";
+@import "global/variables.scss";
+@import "global/fonts.scss";
+@import "global/global.scss";
+@import "global/page.scss";
+@import "blocks/main-header.scss";
+@import "blocks/head-block.scss";
+@import "blocks/programs.scss";
+@import "blocks/intro.scss";
+@import "blocks/demo.scss";
+@import "blocks/footer.scss";
+@import "blocks/search.scss";
+@import "blocks/catalog.scss";
+@import "blocks/additionally.scss";
+@import "blocks/form.scss";
+@import "blocks/product.scss";
