--- a/source/sass/blocks/additionally.scss
+++ b/source/sass/blocks/additionally.scss
@@ -1,5 +1,5 @@
 .additionally {
-  padding-top: 29px;
+  padding-top: 24px;
   padding-bottom: 35px;
 }
 
@@ -13,7 +13,7 @@
   width: 100%;
   height: 3px;
   position: absolute;
-  top: 20px;
+  top: 14px;
   right: -20px;
   background-color: $green;
 }
@@ -21,15 +21,17 @@
 .additionally__title {
   font-family: $fontOswald;
   display: inline-block;
-  font-size: 36px;
   vertical-align: baseline;
   font-weight: 400;
   width: auto;
-  line-height: 36px;
   text-align: left;
   background-color: $white;
   margin-top: 0;
   padding-right: 20px;
+  font-size: 24px;
+  line-height: 24px;
+  letter-spacing: 0em;
+  margin-bottom: 37px;
 }
 
 .additionally__list {
@@ -39,7 +41,7 @@
 }
 
 .additionally__item {
-  padding: 25px 37px 29px 38px;
+  padding: 13px 0 20px 0;
   border-top: 1px solid $lightgrey;
 }
 
@@ -49,6 +51,7 @@
 
 .additionally-button {
   width: 100%;
+  margin-top: 14px;
 }
 
 .additionally__item-title {
@@ -81,9 +84,10 @@
   background-color: $green;
   text-align: center;
   padding-top: 65px;
-  padding-bottom: 44px;
+  padding-bottom: 25px;
   background-position: center center;
   background-size: 100% 100%;
+  margin-top: 33px;
 }
 
 .additionally-promotion-text {
@@ -93,6 +97,7 @@
   font-weight: 400;
   line-height: 20px;
   text-align: center;
+  padding: 19px 55px 7px 55px;
 }
 
 @media (min-width: $tablet-width) {
