--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,10 +7,18 @@
   padding-right: 20px;
 }
 
+.footer___acaemy-title {
+  font-family: $fontLato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+}
+
 .footer__block-logo {
   text-align: center;
   padding-top: 40px;
-  padding-bottom: 27px;
+  padding-bottom: 11px;
 }
 
 .footer__block-social {
@@ -24,7 +32,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 23px 0 17px;
+  padding: 20px 0 12px;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
 }
@@ -50,7 +58,7 @@
 
 @media (min-width: $tablet-width) {
   .footer {
-    padding-top: 60px;
+    padding-top: 22px;
     padding-bottom: 50px;
     align-items: center;
   }
@@ -63,21 +71,30 @@
   .footer__wrapper {
     display: flex;
     align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
   }
 
   .footer__block-logo {
-    width: 30%;
+    width: 22%;
+    text-align: left;
+    padding-top: 30px;
   }
 
   .footer__block-social {
     width: 50%;
   }
 
+  .footer__social-list {
+    border: none;
+    margin-top: 10px;
+    padding-left: 22px;
+  }
+
   .footer__block-htmlAcademy {
-    width: 20%;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-right: 20px;
+    width: 22%;
+    padding-top: 30px;
+    margin-left: 36px;
   }
 }
 
