--- a/source/sass/blocks/head-block.scss
+++ b/source/sass/blocks/head-block.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-image: url("../img/index-background-mobile@2x.jpg");
   background-position: 50% -10px;
-  background-size: 100% 305px;
+  background-size: 100% 312px;
 }
 
 .head-block__wrapper {
@@ -14,13 +14,14 @@
 }
 
 .head-block__button {
-  font-size: 14px;
-  line-height: 18px;
   width: 100%;
   height: 40px;
   padding-top: 11px;
   padding-bottom: 11px;
-  margin-top: 3px;
+  margin-top: 13px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .head-block__img {
@@ -35,35 +36,52 @@
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
-  margin-bottom: 26px;
+  margin-bottom: 14px;
+  margin-left: 4px;
 }
 
 .head-block__text {
   color: $white;
-  line-height: 14px;
+  line-height: 38px;
   text-transform: uppercase;
-  margin-bottom: 27px;
+  margin-bottom: 17px;
   text-align: center;
   margin-top: 0;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 @media (min-width: $tablet-width) {
   .head-block {
-    padding-top: 52px;
-    padding-bottom: 533px;
+    padding-top: 66px;
+    padding-bottom: 525px;
     background-image: url("../img/index-can-desktop@2x.png");
-    background-position: 30px 251px;
-    background-size: 709px 609px;
+    background-position: 63px 260px;
+    background-size: 675px 609px;
+  }
+
+  .head-block__text {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    padding-left: 3px;
+    margin-bottom: 37px;
   }
 
   .head-block__button {
     order: 2;
     width: 244px;
     height: 54px;
+    margin-left: 3px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
   }
 
   .head-block__wrapper {
-    padding-left: 90px;
+    padding-left: 116px;
     padding-right: 30px;
   }
 
@@ -93,15 +111,16 @@
     align-items: flex-start;
     align-content: flex-start;
     height: 602px;
-    padding-left: 110px;
+    padding-left: 188px;
     padding-right: 110px;
   }
 
   .head-block {
+    padding-top: 140px;
     background-image: url("../img/ibd1x.jpg");
-    background-position: calc(100% + 70px) 0;
-    background-size: 680px 696px;
-    padding-bottom: 10px;
+    background-position: calc(100% + 0px) 0;
+    background-size: 720px 696px;
+    padding-bottom: 33px;
   }
 
   .head-block__picture {
@@ -110,8 +129,12 @@
 
   .head-block__img {
     display: inline-block;
-    width: 597px;
-    margin-left: -48px;
+    width: 607px;
+    margin-left: -56px;
+  }
+
+  .head-block__title {
+    margin-top: 85px;
   }
 
   @media (min-resolution: 2dppx) {
