--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -12,9 +12,17 @@
 .programs__list-item {
   position: relative;
   padding: 21px;
-  margin-top: 22px;
+  margin-top: 20px;
   background-color: $smokywhite;
-  width: 100%;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .program__picture {
@@ -48,6 +56,9 @@
   margin-top: 17px;
   margin-bottom: 0;
   border-bottom: 1px solid $lightgrey;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 .program-item__link {
@@ -62,15 +73,16 @@
 
 .program__link-title {
   z-index: 1;
-  font-size: 16px;
-  line-height: 16px;
   font-weight: 400;
   text-transform: uppercase;
   color: $black;
   width: auto;
-  padding-right: 10px;
+  padding-right: 15px;
   margin: 0;
   background-color: transparent;
+  text-align: center;
+  font-size: 16px;
+  line-height: 16px;
 }
 
 .program-icon {
@@ -96,16 +108,24 @@
     padding-right: 30px;
   }
 
+  .program__link-title {
+    padding-right: 23px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+  }
+
   .programs__list-item {
-    padding: 77px 60px 62px 52px;
+    padding: 76px 60px 55px 52px;
     margin-top: 0;
     margin-bottom: 31px;
   }
 
   .program__picture {
     position: absolute;
-    top: 15px;
-    right: 0;
+    right: 62px;
+    top: 94px;
     width: 202px;
     height: 202px;
     margin-left: auto;
@@ -123,6 +143,21 @@
     line-height: 37px;
     margin-top: 0;
     margin-bottom: 8px;
+  }
+
+  .program-item__intro {
+    font-family: $fontLato;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    border: none;
+    padding-bottom: 32px;
+    padding-right: 24px;
+  }
+
+  .program-item__intro--pro {
+    padding-bottom: 57px;
   }
 
   .program-item__title,
@@ -145,14 +180,16 @@
   }
 
   .program__picture--slim {
-    width: 100%;
-    height: 100%;
+    width: 140px;
+    height: 194px;
+    left: 30px;
+    top: -10px;
   }
 
   .program__picture--pro {
-    width: 100%;
-    height: 100%;
-    top: 5px;
+    width: 268px;
+    height: 112px;
+    top: 40px;
   }
 }
 
@@ -162,8 +199,22 @@
     gap: 80px;
   }
 
+  .programs__list-item {
+    width: 46.7%;
+    padding: 45px 40px 58px 50px;
+  }
+
+  .program__picture--slim {
+    width: 70px;
+    height: 97px;
+    left: 14px;
+    top: -4px;
+  }
+
   .program__picture--pro {
-    top: 5px;
+    top: 21px;
+    width: 134px;
+    height: 56px;
   }
 
   .programs__wrapper {
@@ -174,7 +225,8 @@
   .program__picture {
     display: flex;
     position: relative;
-    top: 0;
+    top: 3px;
+    left: -2px;
     width: 100px;
     height: 100px;
     margin-left: 0;
@@ -189,7 +241,7 @@
 
   .program-item__intro {
     width: 100%;
-    padding-bottom: 32px;
-    margin-top: 40px;
+    padding-bottom: 8px;
+    margin-top: 42px;
   }
 }
