--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -79,7 +79,7 @@
     border: 1px solid $lightgrey;
   }
 
-  .catalog__footer--icon {
+  .catalog__icon {
     width: 60px;
     height: 60px;
   }
