--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -15,6 +15,10 @@
   cursor: pointer;
 }
 
+.button:hover {
+  color: #80EA69
+}
+
 @media (min-width: $tablet-width) {
   .button {
     font-size: 20px;
