--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -19,13 +19,13 @@
   margin-bottom: 12px;
 }
 
-.form__set-options--label {
+.form__set-label {
   font-size: 16px;
   text-transform: uppercase;
   white-space: nowrap;
 }
 
-.form__set-options--input {
+.form__set-input {
   font-family: $fontOswald;
   width: 100%;
   margin-left: 13px;
@@ -34,6 +34,14 @@
   padding: 11px 15px;
   border: 1px solid $platinum;
   outline: 0;
+}
+
+.form__set-input:hover {
+  border: 1px solid #CDCDCD;
+}
+
+.form__set-input:focus {
+  border: 2px solid #444444;
 }
 
 .form__set-contact {
@@ -48,7 +56,7 @@
   margin-bottom: -15px;
 }
 
-.form__set-contact--title {
+.form__set-title {
   display: inline-block;
   vertical-align: baseline;
   font-size: 24px;
@@ -65,38 +73,38 @@
   margin-top: 0;
 }
 
-.form__set-contact--title::after,
-.form__set-contact--title::before {
+.form__set-title::after,
+.form__set-title::before {
   content: "";
   position: absolute;
   top: 25%;
-  width: 100vw; // чтоб тянулось на всю ширину экрана
+  width: 100vw;
   height: 3px;
   margin-top: 2px;
-  background: #68b738;
+  background: $green;
   z-index: -1;
 }
 
-.form__set-contact--title::after {
+.form__set-title::after {
   left: 20px;
 }
 
-.form__set-contact--title::before {
+.form__set-title::before {
   right: 0;
 }
 
-.form__set-contact--foot {
+.form__set-foot {
   margin-top: 15px;
 }
 
-.form__set-contact--block {
+.form__set-block {
   display: flex;
   position: relative;
   align-items: center;
   margin-bottom: 12px;
 }
 
-.form__set-comment--title {
+.form__head-title {
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
@@ -104,14 +112,16 @@
   margin-top: -3px;
   position: relative;
   display: inline-block;
-  padding-right: 21px;
-  padding-left: 0;
+  padding-right: 20px;
   margin-bottom: 35px;
   background: $white;
+  max-width: 205px;
+  margin-left: -20px;
+  padding-left: 20px;
 }
 
-.form__set-comment--title::after,
-.form__set-comment--title::before {
+.form__head-title::after,
+.form__head-title::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -122,22 +132,22 @@
   z-index: -1;
 }
 
-.form__set-comment--title::after {
+.form__head-title::after {
   left: 20px;
 }
 
-.form__set-comment--title::before {
+.form__head-title::before {
   right: 0;
 }
 
-.form__set-contact--label {
+.form__set-label {
   font-size: 16px;
   text-transform: uppercase;
   color: $black;
   white-space: nowrap;
 }
 
-.form__set-contact--input {
+.form__set-data {
   font-family: $fontOswald;
   font-size: 16px;
   text-transform: uppercase;
@@ -148,13 +158,22 @@
   margin-left: 13px;
 }
 
+.form__set-data:focus {
+  border: 1px solid $grey;
+}
+
 .form__contact-icon {
   position: absolute;
   top: 20px;
   right: 12px;
+  stroke: $black;
 }
 
-.form__set-comment--text {
+.form__set-data:focus + .form__contact-icon {
+  stroke: $green;
+}
+
+.form__set-text {
   width: 94%;
   height: 136px;
   margin-top: 0;
@@ -207,16 +226,21 @@
     padding-bottom: 48px;
   }
 
-  .form__set-comment--title {
+  .form__head-title {
     font-size: 36px;
     font-weight: 400;
     line-height: 36px;
     text-align: left;
     margin-bottom: 88px;
+    max-width: none;
+    margin-left: -40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-right: -40px;
   }
 
-  .form__set-contact--title::after,
-  .form__set-contact--title::before {
+  .form__set-title::after,
+  .form__set-title::before {
     margin-top: 17px;
   }
 
@@ -224,7 +248,7 @@
     padding-bottom: 54px;
   }
 
-  .form__set-comment--text {
+  .form__set-text {
     width: 97%;
     font-size: 20px;
     font-weight: 400;
@@ -238,14 +262,14 @@
     padding-bottom: 8px;
   }
 
-  .form__set-options--label {
+  .form__set-label {
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
     text-align: left;
   }
 
-  .form__set-options--input {
+  .form__set-input {
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
@@ -264,7 +288,7 @@
     margin-top: 60px;
   }
 
-  .form__set-contact--title {
+  .form__set-title {
     display: inline;
     margin-bottom: 76px;
     font-size: 36px;
@@ -274,22 +298,16 @@
     margin-left: -3px;
   }
 
-  .form__set-contact--foot {
+  .form__set-foot {
     margin-top: 68px;
   }
 
-  .form__set-contact--block {
+  .form__set-block {
     margin-bottom: 20px;
   }
 
-  .form__set-contact--label {
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    text-align: left;
-  }
 
-  .form__set-contact--input {
+  .form__set-data {
     padding-left: 18px;
     font-size: 20px;
     font-weight: 400;
@@ -368,12 +386,13 @@
     margin-top: -13px;
   }
 
-  .form__set-contact--foot {
+  .form__set-foot {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 
-  .form__set-contact--block {
+  .form__set-block {
     width: 46.5%;
   }
 
@@ -386,7 +405,7 @@
     margin-right: 79px;
   }
 
-  .form__set-comment--title {
+  .form__head-title {
     margin-bottom: 76px;
   }
 }
