--- a/source/sass/blocks/head-block.scss
+++ b/source/sass/blocks/head-block.scss
@@ -9,7 +9,6 @@
 
 .head-block__button {
   width: 100%;
-  height: 40px;
   padding-top: 11px;
   padding-bottom: 11px;
   margin-top: 13px;
@@ -19,8 +18,12 @@
 }
 
 .head-block__img {
-  width: 100%;
+  width: 280px;
   text-align: center;
+}
+
+.head-block__picture {
+  margin: 0 auto;
 }
 
 .head-block__title {
@@ -60,6 +63,7 @@
   }
 
   .head-block__text {
+    width: 300px;
     font-size: 20px;
     font-weight: 400;
     line-height: 20px;
@@ -137,5 +141,4 @@
   .head-block__title {
     margin-top: 86px;
   }
-
 }
