--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -9,6 +9,7 @@
 }
 
 .intro__list {
+  align-items: flex-start;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -132,9 +133,14 @@
     margin-bottom: 70px;
   }
 
+  .intro__item {
+    width: 245px;
+  }
+
   .intro__list {
     display: flex;
-    gap: 70px;
+    flex-wrap: wrap;
+    column-count: 4;
   }
 
   .intro__wrapper {
