--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -13,6 +13,19 @@
   width: 100%;
 }
 
+.main-header__toggle {
+  z-index: 2;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  background-color: transparent;
+  color: $black;
+  border: none;
+  background-repeat: no-repeat;
+  margin-top: 7px;
+  background-image: url("../img/button-mobile-closed.svg");
+}
+
 .main-header-index::after {
   content: "";
   position: absolute;
@@ -20,18 +33,46 @@
   top: 20px;
   min-height: 346px;
   width: 100%;
-  background-color: #63a73a;
+  background-color: $green;
   background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   z-index: -1;
 }
 
+.main-header__toggle--closed {
+  background-image: url("../img/button-mobile-closed.svg");
+}
+
+.main-header__toggle--opened {
+  background-image: url("../img/button-mobile-opened.svg");
+}
+
+
+.main-header__toggle .main-header__toggle--closed::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 17px;
+  width: 36px;
+  height: 2px;
+  background-color: $black;
+  box-shadow: 0 8px 0 0 $black, 0 16px 0 0 $black;
+  border: none;
+}
 
 .main-header__logo {
   display: flex;
   height: 65px;
   text-align: center;
+}
+
+.main-header__logo:hover {
+  opacity: 0.7;
+}
+
+.main-header__logo:focus {
+  opacity: 0.5;
 }
 
 .main-header__logo-title {
@@ -48,12 +89,6 @@
   margin-bottom: -14px;
 }
 
-
-
-
-
-
-
 @media (min-width: $tablet-width) {
   .main-header {
     display: flex;
@@ -64,10 +99,15 @@
 
 
   .main-header__container {
+    width: 705px;
     padding-left: 30px;
     padding-right: 30px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .main-header__toggle {
+    display: none;
   }
 
   .main-header-index::after {
@@ -87,8 +127,6 @@
     height: 50px;
   }
 
-
-
   .main-header__logo-picture__tablet {
     display: block;
   }
@@ -98,8 +136,6 @@
     width: 27.11%;
     padding: 0;
   }
-
-
 }
 
 @media (min-width: $desktop-width) {
@@ -136,6 +172,4 @@
     background-color: transparent;
     margin-top: 55px;
   }
-
- 
 }
