--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -92,6 +92,13 @@
     background-image: linear-gradient(to bottom, transparent 0, transparent 77px, $smokywhite 77px, $smokywhite 100%);
   }
 
+  .product__button {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+  }
+
   .product__image {
     z-index: 0;
   }
@@ -131,12 +138,7 @@
 
   .product__wrapper {
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 33px;
   }
@@ -176,5 +178,4 @@
     padding-top: 7px;
     padding-bottom: 6px;
   }
-
 }
