--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -1,10 +1,15 @@
+html {
+  height: 100%;
+}
+
 img {
-  max-width: 100%;
   height: auto;
 }
 
 body {
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   min-height: 100%;
   font-weight: 400;
   font-family: "Oswald", sans-serif;
@@ -12,6 +17,12 @@ body {
   line-height: 30px;
 }
 
+main {
+  flex-grow: 1;
+}
+
 iframe {
   border: none;
+  width: 100%;
+  height: 100%;
 }
