--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,7 +5,7 @@
 @import "blocks/button.scss";
 @import "blocks/main-header.scss";
 @import "blocks/head-block.scss";
-@import "blocks/programs.scss";
+@import "blocks/program.scss";
 @import "blocks/intro.scss";
 @import "blocks/demo.scss";
 @import "blocks/footer.scss";
