--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -106,4 +106,17 @@
     grid-template-columns: 245px 245px 245px 245px;
     column-gap: 80px;
   }
+
+  .catalog__footer {
+    padding-top: 51px;
+    margin-top: 95px;
+  }
+
+  .catalog__footer-title {
+    margin-top: 40px;
+  }
+
+  .catalog__footer-text {
+    margin-bottom: 88px;
+  }
 }
