--- a/source/sass/blocks/additionally.scss
+++ b/source/sass/blocks/additionally.scss
@@ -1,6 +1,6 @@
 .additionally {
   padding-top: 26px;
-  padding-bottom: 33px;
+  padding-bottom: 35px;
   overflow-x: hidden;
 }
 
@@ -97,25 +97,14 @@
 .additionally__promotion {
   position: relative;
   text-align: center;
-  padding-top: 65px;
+  padding-top: 53px;
   padding-bottom: 25px;
-  background-position: center center;
-  background-size: 100% 100%;
-  margin-top: 37px;
-}
-
-.additionally__promotion::before {
-  content: "";
+  margin-top: 38px;
   background-image: url("../img/gift-mobile@1x.jpg");
-  position: absolute;
-  right: 0;
-  top: 20px;
-  min-height: 290px;
-  width: 100%;
   background-color: $green;
   background-repeat: no-repeat;
-  background-position: center top;
-  z-index: -1;
+  background-position: center;
+  background-size: cover;
 }
 
 .additionally__promotion-text {
@@ -125,33 +114,20 @@
   font-weight: 400;
   line-height: 20px;
   text-align: center;
-  padding: 13px 55px 7px 55px;
+  padding: 26px 55px 7px 55px;
 }
 
 @media (min-width: $tablet-width) {
   .additionally__list {
-    margin-bottom: 70px;
+    margin-bottom: 48px;
     border-top: 1px solid $lightgrey;
     border-bottom: 1px solid $lightgrey;
     border-left: 1px solid $lightgrey;
     border-right: 1px solid $lightgrey;
   }
 
-  .additionally__promotion::before {
-    content: "";
-    background-image: url("../img/gift-tablet@1x.jpg");
-    position: absolute;
-    min-height: 200px;
-    right: 0;
-    width: 100%;
-    background-color: $green;
-    background-repeat: no-repeat;
-    background-position: center top;
-    z-index: -1;
-  }
-
   .additionally {
-    padding-top: 51px;
+    padding-top: 50px;
     padding-bottom: 75px;
   }
 
@@ -166,8 +142,10 @@
     font-weight: 400;
     line-height: 36px;
     text-align: center;
-    margin-left: 40px;
-    margin-bottom: 80px;
+    padding-left: 40px;
+    margin-left: 0;
+    margin-bottom: 77px;
+    padding-right: 40px;
   }
 
   .additionally__item {
@@ -177,12 +155,18 @@
     padding: 26px 40px 28px 40px;
   }
 
+  .additionally__item-price {
+    width: 88px;
+  }
+
+
   .additionally__promotion {
     display: flex;
     align-items: center;
     text-align: center;
-    padding: 40px 56px 45px 78px;
+    padding: 41px 56px 45px 78px;
     justify-content: space-between;
+    margin-top: 68px;
   }
 
   .additionally__promotion__picture {
@@ -210,6 +194,10 @@
   }
 
   .additionally__button {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
     margin-top: 0;
   }
 }
@@ -228,17 +216,11 @@
     margin-top: 0;
   }
 
-  .additionally__promotion::before {
-    background-image: url("../img/gift-desktop@2x.jpg");
-    min-height: 288px;
-  }
-
   .additionally__item-tab {
     font-size: 16px;
     line-height: 20px;
-    margin-top: 2px;
-    width: 285px;
-    margin-right: 39px;
+    width: auto;
+    margin: 0;
   }
 
   .additionally__list {
@@ -249,19 +231,20 @@
 
   .additionally__item {
     display: grid;
-    grid-template-columns: 161px 163px 244px;
+    grid-template-columns: 286px 285px 244px;
+    padding-left: 2px;
+    padding-right: 3px;
+    align-items: center;
     padding-top: 15px;
-    padding-left: 1px;
-    padding-bottom: 14px;
-    padding-right: 0;
+    padding-bottom: 15px;
   }
 
   .additionally__item-title {
     display: flex;
-    width: 245px;
-    margin: 0 81px 0 0;
     align-items: center;
     text-align: center;
+    margin: 0;
+    width: auto;
   }
 
   .additionally__item-price {
@@ -274,7 +257,8 @@
   }
 
   .additionally__title {
-    margin-left: 0;
+    margin-left: -40px;
+    margin-bottom: 85px;
   }
 
   .additionally {
@@ -292,6 +276,6 @@
 
   .additionally__promotion-text {
     text-align: center;
-    margin-bottom: 33px;
+    margin-bottom: 40px;
   }
 }
