--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -5,7 +5,7 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: $white;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 9px;
@@ -16,7 +16,7 @@
 }
 
 .button:hover {
-  color: #80EA69
+  color: $lightgreen;
 }
 
 @media (min-width: $tablet-width) {
