--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -23,6 +23,7 @@
   font-size: 16px;
   text-transform: uppercase;
   white-space: nowrap;
+  color: $black;
 }
 
 .form__set-input {
@@ -37,15 +38,15 @@
 }
 
 .form__set-input:hover {
-  border: 1px solid #CDCDCD;
+  border: 1px solid $platinum;
 }
 
 .form__set-input:focus {
-  border: 2px solid #444444;
+  border: 2px solid $grey;
 }
 
 .form__set-contact {
-  padding-top: 7px;
+  padding-top: 28px;
 }
 
 .form__set-contact--head {
@@ -113,7 +114,7 @@
   position: relative;
   display: inline-block;
   padding-right: 20px;
-  margin-bottom: 35px;
+  margin-bottom: 18px;
   background: $white;
   max-width: 205px;
   margin-left: -20px;
@@ -124,7 +125,7 @@
 .form__head-title::before {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 30%;
   width: 100vw;
   height: 3px;
   margin-top: 2px;
@@ -138,13 +139,6 @@
 
 .form__head-title::before {
   right: 0;
-}
-
-.form__set-label {
-  font-size: 16px;
-  text-transform: uppercase;
-  color: $black;
-  white-space: nowrap;
 }
 
 .form__set-data {
@@ -164,7 +158,7 @@
 
 .form__contact-icon {
   position: absolute;
-  top: 20px;
+  top: 15px;
   right: 12px;
   stroke: $black;
 }
@@ -176,7 +170,7 @@
 .form__set-text {
   width: 94%;
   height: 136px;
-  margin-top: 0;
+  margin-top: 20px;
   resize: none;
   font-family: $fontOswald;
   font-size: 16px;
@@ -231,7 +225,7 @@
     font-weight: 400;
     line-height: 36px;
     text-align: left;
-    margin-bottom: 88px;
+    margin-bottom: 6px;
     max-width: none;
     margin-left: -40px;
     padding-left: 40px;
@@ -245,11 +239,12 @@
   }
 
   .form__set-options {
-    padding-bottom: 54px;
+    padding-bottom: 53px;
   }
 
   .form__set-text {
     width: 97%;
+    margin-top: 81px;
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
@@ -285,7 +280,7 @@
 
   .form__set-contact {
     margin-bottom: 65px;
-    margin-top: 60px;
+    margin-top: 41px;
   }
 
   .form__set-title {
@@ -316,7 +311,7 @@
   }
 
   .form__set-comment {
-    margin-bottom: 55px;
+    margin-bottom: 61px;
   }
 
   .form__button-block {
@@ -346,6 +341,14 @@
   .form {
     margin-top: 57px;
   }
+
+  .form__head-title::after {
+    top: 50%;
+  }
+
+  .form__head-title::before {
+    top: 50%;
+  }
 }
 
 @media (min-width: $desktop-width) {
@@ -358,6 +361,10 @@
 
   .form__options {
     padding: 0;
+  }
+
+  .form__set-text {
+    margin-top: 71px;
   }
 
   .form__wrapper {
@@ -377,12 +384,12 @@
 
   .form__set-contact {
     width: 100%;
-    margin-top: -9px;
+    margin-top: -27px;
   }
 
   .form__set-comment {
     width: 100%;
-    margin-bottom: 45px;
+    margin-bottom: 49px;
     margin-top: -13px;
   }
 
@@ -406,6 +413,6 @@
   }
 
   .form__head-title {
-    margin-bottom: 76px;
+    margin-bottom: 6px;
   }
 }
