--- a/source/sass/blocks/head-block.scss
+++ b/source/sass/blocks/head-block.scss
@@ -11,7 +11,7 @@
   width: 100%;
   padding-top: 11px;
   padding-bottom: 11px;
-  margin-top: 13px;
+  margin-top: -4px;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -69,18 +69,19 @@
     line-height: 20px;
     text-align: left;
     padding-left: 3px;
-    margin-bottom: 37px;
+    margin-bottom: 53px;
   }
 
   .head-block__button {
     order: 2;
     width: 244px;
-    height: 54px;
     margin-left: 3px;
     font-size: 20px;
     font-weight: 400;
     line-height: 26px;
     text-align: center;
+    padding-top: 14px;
+    padding-bottom: 14px;
   }
 
   .head-block__wrapper {
