--- a/source/sass/blocks/demo.scss
+++ b/source/sass/blocks/demo.scss
@@ -322,7 +322,7 @@
   }
 
   .demo__stats-value {
-    background-color: $smokywhite;
+    background-color: $platinum;
   }
 
   .demo__stats-subtitle {
