--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -68,6 +68,10 @@
     padding-top: 16px;
   }
 
+  .main-nav--closed {
+    display: block;
+  }
+
   .main-nav__list-item {
     border: none;
     font-size: 18px;
